css fix for footer on mobile size

--- a/capacity4more/themes/c4m/kapablo/sass/components/_blocks.scss
+++ b/capacity4more/themes/c4m/kapablo/sass/components/_blocks.scss
@@ -42,7 +42,8 @@
     li.statistics-item {
       float: left;
       width: 16.5%;
-      padding: 5px 20px 5px 40px;
+      min-width: 150px;
+      padding: 5px 10px 5px 35px;
       color: $color-blue-light;
       background-size: 30px;
       background-repeat: no-repeat;
@@ -121,6 +122,7 @@
   .c4m-social-media {
     float: left;
     line-height: 30px;
+    min-height: 35px;
   }
 
   .c4m-footer-navigation {
